methods.picture.PictureMono2.scala.error
Erreur de compilation :
PictureMono2:4: error: method run is defined twice
  conflicting symbols both originated in file 'plm.runtime2.PictureMono2'
override def run() {
             ^